# camera_chessboard_detector

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  package.xml
cmake/: camera_chessboard_detectorConfig.cmake.in
docs/: BENCHMARK.md  CLANG_FORMAT.md  CUDA_INSTALL.md
include/camera_chessboard_detector/: detector.hpp  types.hpp
src/: core.hpp  detector.cpp  structure_recovery.cpp
src/cpu/: convolution.cpp  convolution.hpp  corner_candidates.hpp  corner_detector.cpp  corner_detector.hpp
src/cuda/: gpu_buffers.cpp  gpu_buffers.hpp  host_image.cpp  kernels.cu  kernels.hpp  nms.cu  nms.hpp  pipeline.cpp  pipeline.hpp  preprocess.cu  preprocess.hpp  score.cu  score.hpp  separable_conv.cu  separable_conv.hpp
src/score/: correlation_kernel_cache.cpp  correlation_kernel_cache.hpp
test/: benchmark.cpp  regression_test.cpp
test/golden/: sample_cpu.csv  sample_cuda.csv  synthetic_cpu.csv  synthetic_cuda.csv
